--- a/loan_Repayment_Analysis.ipynb
+++ b/loan_Repayment_Analysis.ipynb
@@ -4,23 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Keras API Project Exercise - Solutions\n",
-    "\n",
-    "## The Data\n",
-    "\n",
-    "We will be using a subset of the LendingClub DataSet obtained from Kaggle: https://www.kaggle.com/wordsforthewise/lending-club\n",
-    "\n",
-    "## NOTE: Do not download the full zip from the link! We provide a special version of this file that has some extra feature engineering for you to do. You won't be able to follow along with the original file!\n",
-    "\n",
-    "LendingClub is a US peer-to-peer lending company, headquartered in San Francisco, California.[3] It was the first peer-to-peer lender to register its offerings as securities with the Securities and Exchange Commission (SEC), and to offer loan trading on a secondary market. LendingClub is the world's largest peer-to-peer lending platform.\n",
-    "\n",
-    "### Our Goal\n",
-    "\n",
-    "Given historical data on loans given out with information on whether or not the borrower defaulted (charge-off), can we build a model thatcan predict wether or nor a borrower will pay back their loan? This way in the future when we get a new potential customer we can assess whether or not they are likely to pay back the loan. Keep in mind classification metrics when evaluating the performance of your model!\n",
-    "\n",
-    "The \"loan_status\" column contains our label.\n",
-    "\n",
-    "### Data Overview"
+    "# Loan Repayment Analysis"
    ]
   },
   {
